deploy/template_front-end_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    role: webhook 
  name: <name>
spec:
  selector:
   role: webhook
